--- a/Chordstars/app/src/main/res/layout/session_summary_frag.xml
+++ b/Chordstars/app/src/main/res/layout/session_summary_frag.xml
@@ -9,21 +9,17 @@
 
     <ImageView
         android:id="@+id/taylorSwift"
-        android:layout_width="wrap_content"
-        android:layout_height="340sp"
+        android:layout_width="395px"
+        android:layout_height="384px"
         android:layout_centerInParent="true"
         android:src="@drawable/taylorswift" />
 
-    <TextView
-        android:id="@+id/youSelected"
-        android:layout_width="match_parent"
-        android:layout_height="20sp"
-        android:layout_weight="1"
-        android:text="YOU SELECTED:"
-        android:textColor="#E9A172"
-        android:textSize="20sp"
-        android:gravity="center"
-        android:fontFamily="sans-serif-light"/>
+    <ImageView
+        android:id="@+id/score"
+        android:layout_width="231px"
+        android:layout_height="255px"
+        android:layout_centerInParent="true"
+        android:src="@drawable/score" />
 
     <TextView
         android:id="@+id/stateOfGrace"
@@ -38,35 +34,53 @@
         android:layout_marginTop="-45dp"/>
 
     <Button
-        android:id="@+id/playOnGuitarBtn"
-        android:onClick="playOnGuitar"
+        android:id="@+id/playbackSessionBtn"
+        android:onClick="selectFrag"
 
-        android:text="PLAY ON GUITAR"
+        android:text="PLAYBACK SESSION"
         android:textColor="#ED4B94"
         android:textSize="20sp"
 
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:background="@drawable/buttonshape"
-        android:drawableLeft="@drawable/iconguitar"
-        android:drawablePadding="-20dp"
+        android:drawableLeft="@drawable/iconplayback"
+        android:drawablePadding="-40dp"
 
         android:fontFamily="sans-serif-light"
         android:layout_marginBottom="10dp"
         />
 
     <Button
-        android:id="@+id/listenToSongBtn"
+        android:id="@+id/restartSessionBtn"
+        android:onClick="selectFrag"
 
-        android:text="LISTEN TO SONG"
+        android:text="RESTART SESSION"
         android:textColor="#ED4B94"
         android:textSize="20sp"
 
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:background="@drawable/buttonshape"
-        android:drawableLeft="@drawable/iconear"
-        android:drawablePadding="-20dp"
+        android:drawableLeft="@drawable/iconrestart"
+        android:drawablePadding="-57dp"
+
+        android:fontFamily="sans-serif-light"
+        android:layout_marginBottom="10dp"
+        />
+
+    <Button
+        android:id="@+id/chooseDiffSongBtn"
+
+        android:text="CHOOSE ANOTHER SONG"
+        android:textColor="#ED4B94"
+        android:textSize="20sp"
+
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:background="@drawable/buttonshape"
+        android:drawableLeft="@drawable/iconchoose"
+        android:drawablePadding="2dp"
         android:layout_marginTop="5dp"
 
         android:fontFamily="sans-serif-light"
