User flow up to Session Summary works! Including 5-second delay for ToqActivity

--- a/Chordstars/app/src/main/res/layout/end_session_frag.xml
+++ b/Chordstars/app/src/main/res/layout/end_session_frag.xml
@@ -42,6 +42,7 @@
         android:layout_width="133px"
         android:layout_height="144px"
         android:layout_centerInParent="true"
+        android:layout_marginBottom="3dp"
         android:src="@drawable/silhouetteplaying" />
 
     <Button
