--- a/Chordstars/app/src/main/res/drawable/spinneritemshape.xml
+++ b/Chordstars/app/src/main/res/drawable/spinneritemshape.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <corners
-        android:radius="10dp"
-        />
     <solid
         android:color="@color/bg_color"
         />
@@ -14,10 +11,10 @@
         />
     <size
         android:width="260dp"
-        android:height="50dp"
+        android:height="32dp"
         />
     <stroke
-        android:width="1dp"
-        android:color="@color/button_color"
+        android:width="0dp"
+        android:color="@color/spinner_color"
         />
 </shape>
