--- a/Chordstars/app/src/main/res/drawable/spinnershape.xml
+++ b/Chordstars/app/src/main/res/drawable/spinnershape.xml
@@ -18,6 +18,6 @@
         />
     <stroke
         android:width="1dp"
-        android:color="@color/button_color"
+        android:color="@color/spinner_color"
         />
 </shape>
