--- a/Chordstars/app/src/main/res/layout/activity_main.xml
+++ b/Chordstars/app/src/main/res/layout/activity_main.xml
@@ -6,48 +6,10 @@
     android:background="#1A1919"
     android:gravity="center" >
 
-    <fragment
-        android:name="guitarheroes.com.chordstar.SelectSongFrag1"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/fragment_place"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-    <Button
-        android:id="@+id/selectSongBtn"
-        android:onClick="selectFrag"
-
-        android:text="SELECT SONG"
-        android:textColor="#ED4B94"
-        android:textSize="20sp"
-
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:background="@drawable/buttonshape"
-
-        android:fontFamily="sans-serif-light"
-        android:layout_marginBottom="10dp"
-        />
-
-    <Button
-        android:id="@+id/downloadMoreBtn"
-
-        android:text="DOWNLOAD MORE SONGS"
-        android:textColor="#ED4B94"
-        android:textSize="20sp"
-
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:background="@drawable/buttonshape"
-        android:drawableLeft="@drawable/iconplus"
-
-        android:fontFamily="sans-serif-light"
-
-        android:onClick="onOpenWebBrowser"
-        android:layout_marginBottom="15dp"
-
-        />
-
-    </fragment>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
 
