--- a/Chordstars/app/src/main/res/values/dimens.xml
+++ b/Chordstars/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="button_width">300dp</dimen>
+    <dimen name="button_height">50dp</dimen>
+    <dimen name="button_spacing">10dp</dimen>
+    <dimen name="music_note_bottom_margin">50dp</dimen>
 </resources>
