--- a/Chordstars/app/src/main/res/layout/fragment_progress.xml
+++ b/Chordstars/app/src/main/res/layout/fragment_progress.xml
@@ -10,13 +10,13 @@
     <TextView
         android:id="@+id/youSelected"
         android:layout_width="match_parent"
-        android:layout_height="20sp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:text="TIME SPENT PRACTICING"
         android:textColor="#E9A172"
         android:textSize="20sp"
         android:gravity="center"
-        android:fontFamily="sans-serif-light"/>
+        android:fontFamily="sans-serif-light"
+        android:layout_marginBottom="@dimen/button_spacing"/>
 
     <Spinner
         android:id="@+id/selectTimeFrameSpinner"
@@ -25,11 +25,11 @@
         android:layout_marginBottom="@dimen/button_spacing"/>
 
     <ImageView
-        android:id="@+id/taylorSwift"
+        android:id="@+id/barchart"
         android:layout_width="wrap_content"
         android:layout_height="340sp"
         android:layout_centerInParent="true"
-        android:src="@drawable/taylorswift" />
+        android:src="@drawable/barchart1" />
 
 
 </LinearLayout>
