Added Voice Recorder Intent

--- a/Chordstars/app/src/main/res/layout/fragment_playback_session.xml
+++ b/Chordstars/app/src/main/res/layout/fragment_playback_session.xml
@@ -89,7 +89,7 @@
 
         android:fontFamily="sans-serif-light"
 
-        android:onClick="onOpenWebBrowser"
+        android:onClick="openVoiceRecorder"
         android:layout_marginBottom="15dp"
 
         />
