--- a/Chordstars/app/src/main/res/menu/menu_main.xml
+++ b/Chordstars/app/src/main/res/menu/menu_main.xml
@@ -8,6 +8,11 @@
         android:orderInCategory="1"
         app:showAsAction="never" />
 
+    <item android:id="@+id/action_tuner"
+        android:title="Tuner"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
